--- a/style/menu.scss
+++ b/style/menu.scss
@@ -2,6 +2,6 @@
     height: 900px;
     border-top-left-radius: 24px;
     border-top-right-radius: 24px;
-    background-color: beige;
+    background-color: #F6F6F6;
     transform: translateY(-100px);
 }
